@@ -1,6 +1,18 @@
 package com.twitter.util.events
 
+import com.twitter.app.GlobalFlag
 import com.twitter.util.events.Event.Type
+
+// Note: these flags should generally be specified via System properties
+// to ensure that their values are available very early in the application's
+// lifecycle.
+private[events] object sinkEnabled extends GlobalFlag[Boolean](
+  true,
+  "Whether or not event capture is enabled. Prefer setting via System properties.")
+
+private[events] object approxNumEvents extends GlobalFlag[Int](
+  10000,
+  "Approximate number of events to keep in memory. Prefer setting via System properties.")
 
 /**
  * Where runtime events such as logging, stats and tracing can be
@@ -22,6 +34,15 @@ trait Sink {
   /**
    * Event input is captured as individual fields in service of
    * avoiding an allocation to wrap the event.
+   *
+   * Note that callers should check [[recording]] before calling
+   * into this method:
+   *
+   * {{{
+   *   if (sink.recording) {
+   *     sink.event(...)
+   *   }
+   * }}}
    */
   def event(
     etype: Event.Type,
@@ -38,6 +59,35 @@ trait Sink {
    * '''Note:''' the events are not returned in any particular order.
    */
   def events: Iterator[Event]
+
+  /**
+   * Whether or not this [[Sink sink]] should be recording events.
+   *
+   * This is external to the [[event()]] and managed by caller because
+   * there is some expense in capturing the data sent to that call.
+   *
+   * The expectation is for callers to do:
+   * {{{
+   *   if (sink.recording) {
+   *     sink.event(...)
+   *   }
+   * }}}
+   */
+  def recording: Boolean = true
+
+  /**
+   * Update the current state of [[recording]].
+   *
+   * For Java compatibility see [[setRecording]].
+   */
+  def recording_=(enabled: Boolean): Unit = ()
+
+  /**
+   * Update the current state of [[recording]].
+   *
+   * Java compatibility for [[recording_=]].
+   */
+  def setRecording(enabled: Boolean): Unit = recording_=(enabled)
 
 }
 
@@ -93,6 +143,9 @@ object Sink {
 
   /**
    * Returns whether or not any event capture is enabled.
+   * Note that this does not necessarily mean that events
+   * are being [[Sink.recording recorded]], it only means
+   * there is a place to store recorded events.
    */
   def enabled: Boolean = default ne Null
 }
